Added <meta> tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <script src = "script.js"></script>
   <title>CountDown</title>
   <link rel="stylesheet" href="style.css">
+  <meta property = "og:title" content = "Counter">
 </head>
 
 <body>
