--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>CountDown</title>
   <link rel="stylesheet" href="style.css">
   <meta property = "og:title" content = "Counter">
+  <link rel="icon" href="https://media.discordapp.net/attachments/645029213560242196/645029350130843649/Io_Satoru_copi.png?width=976&height=976" type="image/png" />
 </head>
 
 <body>
